v1.0
New methods:
-- Photo and file upload now supported through #put_picture and general support for file hashes (see documentation)
-- Added a delete_like method (thanks to wassem)
Internal improvements: 
-- For public requests, Koala now uses http by default (instead of https) to improve speed
  -- This can be overridden through Koala.always_use_ssl= or by passing :use_ssl => true in the options hash for an api call
-- Read-only REST API requests now go through the faster api-read server
-- Replaced parse_signed_request with a version from Facebook that also supports the new signed params proposal
  -- Note: invalid requests will now raise exceptions rather than return nil, in keeping with other SDKs
-- delete_object will now raise an error if there's no access token (like put_object and delete_like)
Test improvements:
-- Expanded HTTP service tests (added Typhoeus test suite and additional Net::HTTP test cases)
-- Live tests now verify that the access token has the necessary permissions before starting
-- Replaced the 50-person network test, which often took 15+ minutes to run live, with a 5-person test

v0.10.0
-- Added test user module
-- Fixed bug when raising APIError after Facebook fails to exchange session keys
-- Made access_token accessible via the readonly access_token property on all our API classes

v0.9.1
-- Tests are now compatible with Ruby 1.9.2
-- Added JSON to runtime dependencies
-- Removed examples directory (referenced from github instead)

v0.9.0
-- Added parse_signed_request to handle Facebook's new authentication scheme
  -- note: creates dependency on OpenSSL (OpenSSL::HMAC) for decryption
-- Added GraphCollection class to provide paging support for GraphAPI get_connections and search methods (thanks to jagthedrummer)
-- Added get_page method to easily fetch pages of results from GraphCollections
-- Exchanging sessions for tokens now works properly when provided invalid/expired session keys