@@ -40,17 +40,23 @@ module Koala
         list.each {|u| delete u }
       end
       
-      def befriend(user1, user2)
-        user1_id = user1["id"] if user1.is_a?(Hash)
-        user2_id = user2["id"] if user2.is_a?(Hash)
-
-        user1_token = user1["access_token"] if user1.is_a?(Hash)
-        user2_token = user2["access_token"] if user2.is_a?(Hash)
-
+      def befriend(user1_hash, user2_hash)
+        user1_id = user1_hash["id"] || user1_hash[:id]
+        user2_id = user2_hash["id"] || user2_hash[:id]
+        user1_token = user1_hash["access_token"] || user1_hash[:access_token]
+        user2_token = user2_hash["access_token"] || user2_hash[:access_token]
+        unless user1_id && user2_id && user1_token && user2_token
+          # we explicitly raise an error here to minimize the risk of confusing output
+          # if you pass in a string (as was previously supported) no local exception would be raised
+          # but the Facebook call would fail
+          raise ArgumentError, "TestUsers#befriend requires hash arguments with id and access_token"
+        end
+        
         u1_graph_api = GraphAPI.new(user1_token)
         u2_graph_api = GraphAPI.new(user2_token)
 
-        u1_graph_api.graph_call("/#{user1_id}/friends/#{user2_id}", {}, "post") && u2_graph_api.graph_call("/#{user2_id}/friends/#{user1_id}", {}, "post")
+        u1_graph_api.graph_call("#{user1_id}/friends/#{user2_id}", {}, "post") && 
+          u2_graph_api.graph_call("#{user2_id}/friends/#{user1_id}", {}, "post")
       end
 
       def create_network(network_size, installed = true, permissions = '')
